Update teaser caption and abstract

--- a/index.html
+++ b/index.html
@@ -118,16 +118,7 @@
       <div class="hero-body">
         <img src="static/images/teaser.jpg" alt="Overview image." />
         <h2 class="subtitle has-text-left">
-          We present fast and uncertainty-aware multi-view material acquisition for objects captured in uncontrolled
-          setups.
-          We propose to build upon and extend the signal processing framework for inverse rendering by
-          Ramamoorthi and
-          Hanrahan (2001): we improve the model with shadowing and masking and propose a lightweight objective
-          function
-          for BRDF fitting using spherical harmonics power spectra (center). We then use this approximation to
-          provide a measure of uncertainty relying on statistical entropy. We show that our material estimation
-          is
-          significantly faster than previous work and achieves similar or better results (right).
+          We quantify uncertainty for SVBRDF acquisition from multi-view captures (left) using entropy (right). We significantly accelerate the, otherwise heavy, computation in the frequency domain (Spherical Harmonics), yielding a practical, efficient method.
         </h2>
       </div>
     </div>
@@ -142,14 +133,7 @@
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-left">
             <p>
-              This paper aims to quantify uncertainty for SVBRDF acquisition.
-              Under uncontrolled illumination and unstructured viewpoints, there is no guarantee that the observations contain enough information to reconstruct the appearance properties of a captured object.
-              We study this ambiguity, or uncertainty, using entropy and accelerate the analysis by using the frequency domain, rather than the domain of incoming and outgoing viewing angles.
-              The result is a method that computes a map of uncertainty over an entire object within a millisecond.
-              We first validate that the frequency model allows us to recover SVBRDF parameters with competitive performance,
-              that the accelerated entropy computation matches results with a physically-based path tracer,
-              and that there is a positive correlation between error and uncertainty.
-              We then show that the uncertainty map can be applied to improve SVBRDF acquisition using capture guidance, sharing information on the surface, and using a diffusion model to inpaint uncertain regions.
+              This paper aims to quantify uncertainty for SVBRDF acquisition in multi-view captures. Under uncontrolled illumination and unstructured viewpoints, there is no guarantee that the observations contain enough information to reconstruct the appearance properties of a captured object. We study this ambiguity, or uncertainty, using entropy and accelerate the analysis by using the frequency domain, rather than the domain of incoming and outgoing viewing angles. The result is a method that computes a map of uncertainty over an entire object within a millisecond. We find that the frequency model allows us to recover SVBRDF parameters with competitive performance, that the accelerated entropy computation matches results with a physically-based path tracer, and that there is a positive correlation between error and uncertainty. We then show that the uncertainty map can be applied to improve SVBRDF acquisition using capture guidance, sharing information on the surface, and using a diffusion model to inpaint uncertain regions.
             </p>
           </div>
         </div>
