Fix sections and captions

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                Anonymous authors,</span>
+                Ruben Wiersma</span>
 
               <div class="is-size-5 publication-authors">
                 <span class="author-block">SIGGRAPH 2025</span>
@@ -200,6 +200,9 @@
   </section>
   <!--End method overview -->
 
+  <!-- Results -->
+  <section class="section">
+
     <!-- Uncertainty -->
     <section class="hero is-small">
       <div class="hero-body">
@@ -220,10 +223,7 @@
       </div>
     </section>
     <!-- End uncertainty -->
-  </section>
 
-  <!-- Results -->
-  <section class="section">
     <!-- Relighting -->
     <section class="hero is-small">
       <div class="hero-body">
@@ -325,6 +325,7 @@
       </div>
     </section>
     <!-- End relighting -->
+  </section>
 
   <!--Signal processing recap -->
   <section class="section hero is-light is-small" id="method">
@@ -438,18 +439,18 @@
           <div class="column is-5">
             <div class="content">
               <p>
-                The top row shows incoming light for a dirac delta light source (constant in
+                The left column shows incoming light for a dirac delta light source (constant in
                 the spherical harmonic domain) and we see that entropy is low (H=0.25); we can be very certain
                 about the BRDF recovery.
               </p>
               <p>
-                In the middle row, the light only has amplitude in low frequencies and many roughness values are
+                In the center column, the light only has amplitude in low frequencies and many roughness values are
                 equally likely.
                 The higher entropy (H=0.69) is associated with higher uncertainty, which is in line with the
                 conclusions from Ramamoorthi and Hanrahan (2001).
               </p>
               <p>
-                The bottom row shows a material with very low specular reflectance, resulting in high entropy
+                The right column shows a material with very low specular reflectance, resulting in high entropy
                 (H=0.87) and thus high uncertainty.
               </p>
             </div>
