--- a/index.html
+++ b/index.html
@@ -63,11 +63,21 @@
             <h1 class="title is-2 publication-title">Uncertainty for SVBRDF Acquisition using Frequency Analysis</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
-              <span class="author-block">
-                Ruben Wiersma</span>
-
+              <span class="author-block"><a href="https://rubenwiersma.nl/" target="_blank">Ruben Wiersma</a><sup>1, 2, 3</sup>,</span>
+              <span class="author-block"><a href="https://julienphilip.com/" target="_blank">Julien Philip</a><sup>2, 4</sup>,</span>
+              <span class="author-block"><a href="https://miloshasan.net/" target="_blank">Milos Hasan</a><sup>2</sup>,</span>
+              <span class="author-block"><a href="https://krishnamullia.com/" target="_blank">Krishna Mullia</a><sup>2</sup>,</span>
+              <span class="author-block"><a href="https://luanfujun.com/" target="_blank">Fujun Luan</a><sup>2</sup>,</span>
+              <span class="author-block"><a href="https://graphics.tudelft.nl/" target="_blank">Elmar Eisemann</a><sup>3</sup>,</span>
+              <span class="author-block"><a href="https://valentin.deschaintre.fr" target="_blank">Valentin Deschaintre</a><sup>2</sup></span>
               <div class="is-size-5 publication-authors">
-                <span class="author-block">SIGGRAPH 2025</span>
+                <span class="author-block"><sup>1</sup>ETH Z&uuml;rich</span>
+                <span class="author-block"><sup>2</sup>Adobe Research</span>
+                <span class="author-block"><sup>3</sup>TU Delft</span>
+                <span class="author-block"><sup>3</sup>Netflix Eyeline Studios</span>
+              </div>
+              <div class="is-size-5 publication-authors">
+                <span class="author-block"><b>SIGGRAPH 2025</b></span>
               </div>
             </div>
             <div class="column has-text-left">
