--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-left">
-            <h1 class="title is-2 publication-title">Uncertainty for SVBRDF Acquisition using Frequency Analysis</h1>
+            <h1 class="title publication-title">Uncertainty for SVBRDF Acquisition using Frequency Analysis</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block"><a href="https://rubenwiersma.nl/" target="_blank">Ruben Wiersma</a><sup>1, 2, 3</sup>,</span>
