--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <section class="hero teaser">
     <div class="container is-max-desktop">
       <div class="hero-body">
-        <img src="static/images/teaser.jpg" alt="Overview image." />
+        <img src="static/images/teaser.png" alt="Overview image." />
         <h2 class="subtitle has-text-left">
           We quantify uncertainty for SVBRDF acquisition from multi-view captures (left) using entropy (right). We
           significantly accelerate the, otherwise heavy, computation in the frequency domain (Spherical Harmonics),
