--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
               <span class="author-block"><a href="https://valentin.deschaintre.fr" target="_blank">Valentin
                   Deschaintre</a><sup>2</sup></span>
               <div class="is-size-5 publication-authors">
-                <span class="author-block"><sup>1</sup>ETH Z&uuml;rich</span>
-                <span class="author-block"><sup>2</sup>Adobe Research</span>
-                <span class="author-block"><sup>3</sup>TU Delft</span>
+                <span class="author-block"><sup>1</sup>ETH Z&uuml;rich,</span>
+                <span class="author-block"><sup>2</sup>Adobe Research,</span>
+                <span class="author-block"><sup>3</sup>TU Delft,</span>
                 <span class="author-block"><sup>3</sup>Netflix Eyeline Studios</span>
               </div>
               <div class="is-size-5 publication-authors">
