--- a/index.html
+++ b/index.html
@@ -584,8 +584,7 @@
       <h2 class="title">BibTeX</h2>
       <pre><code>
         @inproceedings{wiersma2025svbrdfuncertainty,
-            author = {Wiersma, Ruben and Philip, Julien and Hašan, Miloš and Mullia, Krishna and Luan, Fujun and
-            Eisemann, Elmar and Deschaintre, Valentin},
+          author = {Wiersma, Ruben and Philip, Julien and Hašan, Miloš and Mullia, Krishna and Luan, Fujun and Eisemann, Elmar and Deschaintre, Valentin},
           title = {Uncertainty for SVBRDF Acquisition using Frequency Analysis},
           year = {2025},
           isbn = {979-8-4007-1540-2/2025/08},
@@ -594,7 +593,6 @@
           url = {https://doi.org/10.1145/3721238.3730592},
           doi = {10.1145/3721238.3730592},
           booktitle = {SIGGRAPH Conference Papers '25},
-          articleno = {1}, numpages = {11},
           location = {Vancouver, BC, CA},
           series = {SIGGRAPH Conference Papers '25}
         }
