--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <section class="hero teaser">
     <div class="container is-max-desktop">
       <div class="hero-body">
-        <img src="static/images/teaser.png" alt="Overview image." />
+        <img src="static/images/teaser.jpg" alt="Overview image." />
         <h2 class="subtitle has-text-left">
           We quantify uncertainty for SVBRDF acquisition from multi-view captures (left) using entropy (right). We
           significantly accelerate the, otherwise heavy, computation in the frequency domain (Spherical Harmonics),
@@ -258,7 +258,7 @@
             <p>We show that our formulation for uncertainty using entropy matches with errors resulting from an
               optimization with Mitsuba.</p>
             <br />
-            <img src="static/images/uncertainty.png"
+            <img src="static/images/uncertainty.jpg"
               alt="Results showing a BRDF texture that was optimized with Mitsuba. On the right, the error is shown and a map of the uncertainty." />
             <br /><br />
             <p>
