--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>
           </div>
         </div>
-        <img src="static/images/problem_statement.png"
+        <img src="static/images/problem_statement.jpg"
           alt="Two images that show the same matte and glossy surface in two lighting setups. The first image is rendered with a cloudy environment and the surfaces look similar. The second image is rendered with a sunny environment and the surfaces look very different." />
       </div>
     </div>
