appendix update and paper link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     content="We quantify uncertainty for SVBRDF acquisition from multi-view captures using entropy. The otherwise heavy computation is accelerated in the frequency domain, yielding a practical, efficient method." />
   <meta property="og:url" content="https://svbrdf-uncertainty.github.io" />
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <meta property="og:image" content="static/image/your_banner_image.png" />
+  <meta property="og:image" content="static/image/teaser.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
@@ -88,11 +88,12 @@
               <div class="publication-links">
                 <!-- Arxiv PDF link -->
                 <span class="link-block">
-                  <a class="external-link button is-normal is-rounded is-dark">
+                  <a href="static/pdf/svbrdf_uncertainty_siggraph_2025.pdf"
+                    class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
-                    <span>Paper (coming soon)</span>
+                    <span>Paper</span>
                   </a>
                 </span>
 
@@ -519,11 +520,12 @@
             <div class="publication-links">
               <!-- Arxiv PDF link -->
               <span class="link-block">
-                <a class="external-link button is-normal is-rounded is-dark">
+                <a href="static/pdf/svbrdf_uncertainty_siggraph_2025.pdf"
+                  class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper (coming soon)</span>
+                  <span>Paper</span>
                 </a>
               </span>
 
