Link to new tab

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <div class="publication-links">
                 <!-- Arxiv PDF link -->
                 <span class="link-block">
-                  <a href="static/pdf/svbrdf_uncertainty_siggraph_2025.pdf"
+                  <a href="static/pdf/svbrdf_uncertainty_siggraph_2025.pdf" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -520,7 +520,7 @@
             <div class="publication-links">
               <!-- Arxiv PDF link -->
               <span class="link-block">
-                <a href="static/pdf/svbrdf_uncertainty_siggraph_2025.pdf"
+                <a href="static/pdf/svbrdf_uncertainty_siggraph_2025.pdf" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fas fa-file-pdf"></i>
