--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <span class="author-block"><a href="https://valentin.deschaintre.fr" target="_blank">Valentin
                   Deschaintre</a><sup>3</sup></span>
               <div class="is-size-5 publication-authors">
-                <span class="author-block"><sup>1</sup>ETH Z&uuml;rich,</span>
+                <span class="author-block"><sup>1</sup>ETH Zurich,</span>
                 <span class="author-block"><sup>2</sup>TU Delft,</span>
                 <span class="author-block"><sup>3</sup>Adobe Research,</span>
                 <span class="author-block"><sup>4</sup>Netflix Eyeline Studios</span>
