--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
   <meta property="og:url" content="https://svbrdf-uncertainty.github.io" />
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/image/teaser.jpg" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
+  <meta property="og:image:width" content="2000" />
+  <meta property="og:image:height" content="640" />
 
 
   <meta name="twitter:title" content="Uncertainty for SVBRDF Acquisition using Frequency Analysis">
   <meta name="twitter:description"
     content="We quantify uncertainty for SVBRDF acquisition from multi-view captures using entropy. The otherwise heavy computation is accelerated in the frequency domain, yielding a practical, efficient method.">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
-  <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="static/images/teaser.jpg">
+  <meta name="twitter:card"
+    content="We quantify uncertainty for SVBRDF acquisition from multi-view captures using entropy. The otherwise heavy computation is accelerated in the frequency domain, yielding a practical, efficient method.">
   <!-- Keywords for your paper to be indexed by-->
   <meta name="keywords"
     content="BRDF, SVBRDF, relighting, inverse rendering, differentiable rendering, spherical harmonics, acquisition, material, appearance">
