--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     content="We quantify uncertainty for SVBRDF acquisition from multi-view captures using entropy. The otherwise heavy computation is accelerated in the frequency domain, yielding a practical, efficient method.">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
   <meta name="twitter:image" content="static/images/teaser.jpg">
-  <meta name="twitter:card"
-    content="We quantify uncertainty for SVBRDF acquisition from multi-view captures using entropy. The otherwise heavy computation is accelerated in the frequency domain, yielding a practical, efficient method.">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@rtwiersma">
   <!-- Keywords for your paper to be indexed by-->
   <meta name="keywords"
     content="BRDF, SVBRDF, relighting, inverse rendering, differentiable rendering, spherical harmonics, acquisition, material, appearance">
