--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     content="We quantify uncertainty for SVBRDF acquisition from multi-view captures using entropy. The otherwise heavy computation is accelerated in the frequency domain, yielding a practical, efficient method." />
   <meta property="og:url" content="https://svbrdf-uncertainty.github.io" />
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <meta property="og:image" content="https://svbrdf-uncertainty.github.io/static/image/teaser.jpg" />
+  <meta property="og:image" content="https://svbrdf-uncertainty.github.io/static/images/teaser.jpg" />
   <meta property="og:image:width" content="2000" />
   <meta property="og:image:height" content="640" />
 
@@ -20,8 +20,8 @@
   <meta name="twitter:description"
     content="We quantify uncertainty for SVBRDF acquisition from multi-view captures using entropy. The otherwise heavy computation is accelerated in the frequency domain, yielding a practical, efficient method.">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
-  <meta name="twitter:image" content="https://svbrdf-uncertainty.github.io/static/image/teaser.jpg">
-  <meta name="twitter:image:src" content="https://svbrdf-uncertainty.github.io/static/image/teaser.jpg">
+  <meta name="twitter:image" content="https://svbrdf-uncertainty.github.io/static/images/teaser.jpg">
+  <meta name="twitter:image:src" content="https://svbrdf-uncertainty.github.io/static/images/teaser.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@rtwiersma">
   <!-- Keywords for your paper to be indexed by-->
