--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code (to be released)</span>
+                    <span>Code</span>
                   </a>
                 </span>
 
@@ -559,7 +559,7 @@
                   <span class="icon">
                     <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (to be released)</span>
+                  <span>Code</span>
                 </a>
               </span>
 
