Add presentation link

--- a/index.html
+++ b/index.html
@@ -132,6 +132,17 @@
                   </a>
                 </span>
 
+                <!-- Github link -->
+                <span class="link-block">
+                  <a href="https://youtu.be/jv7oq_wYYug" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-film"></i>
+                    </span>
+                    <span>Presentation</span>
+                  </a>
+                </span>
+
                 <!-- BibTex link -->
                 <span class="link-block">
                   <a href="#bibtex" class="internal-link button is-normal is-rounded is-dark">
@@ -560,6 +571,17 @@
                     <i class="fab fa-github"></i>
                   </span>
                   <span>Code</span>
+                </a>
+              </span>
+
+              <!-- Github link -->
+              <span class="link-block">
+                <a href="https://youtu.be/jv7oq_wYYug" target="_blank"
+                  class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="fas fa-film"></i>
+                  </span>
+                  <span>Presentation</span>
                 </a>
               </span>
 
