Add video embeds

--- a/index.html
+++ b/index.html
@@ -196,6 +196,16 @@
               sharing information on the surface, and using a diffusion model to inpaint uncertain regions.
             </p>
           </div>
+          <div class="columns">
+            <div class="column">
+             <h3 class="title is-4">Presentation</h3>
+             <iframe width="320" height="180" src="https://www.youtube.com/embed/jv7oq_wYYug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+            </div>
+            <div class="column">
+              <h3 class="title is-4">Fast Forward SIGGRAPH 2025</h3>
+              <iframe width="320" height="180" src="https://www.youtube.com/embed/sYelYWJg42k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
         </div>
       </div>
     </div>
